Fixed text align issue with activity. 	Change on 2014/05/21 by psimakov <psimakov@google.com> ------------- Created by MOE: http://code.google.com/p/moe-java MOE_MIGRATED_REVID=67736894

--- a/coursebuilder/assets/css/main.css
+++ b/coursebuilder/assets/css/main.css
@@ -263,6 +263,10 @@ th, td {
   overflow: hidden;
 }
 
+.gcb-activity-contents {
+  text-align: left;
+}
+
 .gcb-assessment-contents {
   text-align: left;
 }
